--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+## 8719 additional gitignore
+simgui-ds.json
+simgui-window.json
+simgui.json
+
 # This gitignore has been specially created by the WPILib team.
 # If you remove items from this file, intellisense might break.
 
